# axenda

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 16faa74af217_rename_date_start_drop_date_end_add_.py  1b8f621d064e_initial_schema.py
scripts/: chat.py  db_by_month.py  db_event_types.py  db_music.py  db_summary.py  db_top_venues.py  db_upcoming.py  run_scrapers.py  test_llm.py
src/axenda/: __init__.py
src/axenda/application/: search_events.py
src/axenda/domain/: models.py  repositories.py  text.py  value_objects.py
src/axenda/infrastructure/: config.py
src/axenda/infrastructure/database/: engine.py  orm_models.py  repositories.py
src/axenda/infrastructure/llm/: client.py  tools.py
src/axenda/infrastructure/scraper/: README.md  base.py  gijon_opendata.py  musicasturiana.py  registry.py
src/axenda/interfaces/telegram/: bot.py  handlers.py
tests/application/: test_search_events.py
tests/domain/: test_models.py  test_value_objects.py
tests/infrastructure/: test_llm_client.py  test_repositories.py  test_tools.py
tests/interfaces/: test_handlers.py
