[project]
name = "axenda"
version = "0.1.0"
description = "Chatbot de Telegram agregador de eventos culturales para Gijón"
authors = [{ name = "Tu Nombre", email = "tu-email@ejemplo.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.11.1",
    "sqlalchemy[asyncio]==2.0.50",
    "alembic==1.18.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "httpx==0.27.2",
    "beautifulsoup4==4.14.3",
    "structlog==24.4.0",
    "apscheduler==3.11.2",
    "aiosqlite==0.22.1",
    "greenlet==3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.4.10",
    "mypy==1.20.2",
]

[tool.poetry]
package-mode = true
packages = [{ include = "axenda", from = "src" }]

[tool.poetry.scripts]
scrape = "scripts.run_scrapers:main"
bot = "axenda.interfaces.telegram.bot:main"

[tool.poetry.group.dev.dependencies]
pytest = "==8.4.2"
pytest-asyncio = "==0.24.0"
pytest-cov = "==5.0.0"
pytest-mock = "==3.15.1"
ruff = "==0.4.10"
mypy = "==1.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
